# BlueRetro

./: .gitignore  .gitmodules  CMakeLists.txt
components/tud_esp_max3421/: CMakeLists.txt
components/tud_esp_max3421/bsp/: board.h  board_api.h  family.c
components/tud_esp_max3421/src/: tusb.c  tusb.h  tusb_config.h  tusb_option.h
components/tud_esp_max3421/src/common/: tusb_compiler.h  tusb_fifo.c  tusb_mcu.h  tusb_private.h
components/tud_esp_max3421/src/device/: usbd_control.c
components/tud_esp_max3421/src/osal/: osal.h  osal_freertos.h
components/tud_esp_max3421/src/portable/analog/max3421/: dcd_max3421.c
main/: CMakeLists.txt  Kconfig.projbuild  linker.lf  main.c
main/adapter/: adapter.h  config.c
main/adapter/wired/: generic.c  generic.h  usb.c  usb.h  wired.c
main/adapter/wired/usb/: usb_xinput.c  usb_xinput.h
main/adapter/wireless/: xbox.c
main/bluetooth/hidp/: hidp.c
main/system/: led.c
main/usb/: usb.c  usb.h
main/usb/descriptors/: dinput.h  switch.h  xinput.h
main/usb/drivers/: xinput.c  xinput.h
main/wired/: generic_i2c.c  generic_i2c.h  generic_spi.c  generic_spi.h  wired_bare.c  wired_bare.h  wired_rtos.c
main/wired/usb/: usb.h  xinput_usb.h
